@@ -13,7 +13,7 @@ import static eu.dissco.core.digitalspecimenprocessor.utils.TestUtils.givenUnequ
 import static org.assertj.core.api.Assertions.assertThat;
 
 import co.elastic.clients.elasticsearch.ElasticsearchClient;
-import co.elastic.clients.json.jackson.JacksonJsonpMapper;
+import co.elastic.clients.json.jackson.Jackson3JsonpMapper;
 import co.elastic.clients.transport.ElasticsearchTransport;
 import co.elastic.clients.transport.rest5_client.Rest5ClientTransport;
 import co.elastic.clients.transport.rest5_client.low_level.Rest5Client;
@@ -65,7 +65,7 @@ class ElasticSearchRepositoryIT {
         .setSSLContext(container.createSslContextFromCa()).build();
 
     ElasticsearchTransport transport = new Rest5ClientTransport(restClient,
-        new JacksonJsonpMapper(MAPPER));
+        new Jackson3JsonpMapper(MAPPER));
 
     client = new ElasticsearchClient(transport);
   }
@@ -102,7 +102,7 @@ class ElasticSearchRepositoryIT {
     // Then
     assertThat(result.errors()).isFalse();
     assertThat(document.source()).isEqualTo(expected);
-    assertThat(result.items().get(0).result()).isEqualTo("created");
+    assertThat(result.items().getFirst().result()).isEqualTo("created");
   }
 
   @Test
@@ -119,7 +119,7 @@ class ElasticSearchRepositoryIT {
     // Then
     assertThat(result.errors()).isFalse();
     assertThat(document.source()).isEqualTo(expected);
-    assertThat(result.items().get(0).result()).isEqualTo("created");
+    assertThat(result.items().getFirst().result()).isEqualTo("created");
   }
 
   @Test
